Begins section on hanh-banach theorem. Introduces Zorn's lemma.

--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \newtheorem{lem}[teo]{Lema}
 \newtheorem{prop}{Proposição}
 \newtheorem{cor}[teo]{Corolário}
+\newtheorem*{axiom}{Axioma}
 
 \theoremstyle{definition}
 \newtheorem{defn}{Definição}[section]
