Finishes section on Zorn's Lemma and includes proof of Hahn-Banach theorem

--- a/hahn-banach.tex
+++ b/hahn-banach.tex
@@ -1,19 +1,38 @@
 % !TeX root = ./master.tex
 \section{O Teorema de Hahn-Banach}
 
+Dado um espaço vetorial \( V \) sobre um corpo \( \K \) , um \emph{funcional linear} em \( V \) é uma função linear \( f : V \to \K \).
+Se \( V \) é um espaço vetorial real (ou seja, \( \K = \R \)), um \emph{funcional sublinear} em \( V \) é uma função \( p : V \to \R \) tal que \[
+    p ( x + y ) \leq p(x) + p(y) \text{ e } p(\lambda x) = \lambda p(x) \text{ para todos \( x, y \in V \) e \( \lambda \in \R \)}
+.\]
+Observe que nada se exige sobre o sinal de \( p \).
+Um exemplo de funcional sublinear é uma seminorma em \( V \).
+
+\begin{teo}[Hahn-Banach]
+    \label{thm: hahn-banach}
+    Sejam \( V \) um espaço vetorial real, \( M \) um subespaço de \( V \) e \( p \) um funcional sublinear em \( V \).
+    Se \( f \) é um funcional linear em \( M \) dominado por \( p \), ou seja, tal que \( f(v) \leq p(v) \) para todo \( v \in M \), então existe um funcional linear \( F \) em \( V \), que coincide com \( f \) em \( M \) e que também é dominado por \( p \).
+    O funcional \( F \) é dito \emph{extensão de Hahn-Banach} de \( f \).
+\end{teo}
+
+Em outras palavras, se, em um espaço vetorial, temos um funcional sublinear que domina um funcional linear definido em um subespaço, podemos extender esse funcional ao espaço todo, mantendo a relação de dominância.
+
+Antes de apresentar a demonstração do Teorema (\ref{thm: hahn-banach}), vamos introduzir alguns conceitos de Teoria dos Conjuntos.
+
 %% Escrever sobre o Teorema, dar uma intuição da importância dele
 
 \subsection{O Lema de Zorn}
 
-Aqui apresentaremos alguns conceitos de Teoria dos Conjuntos que serão utilizados na demonstração de Teorema de Hahn-Banach.
-Dado um conjunto \( X \) uma \emph{relação} em \( X \) é um subconjunto \( R \) de \( X \times X \). 
+Dados conjuntos \( X \) uma \emph{relação} de \( X \) em \( Y \) é um subconjunto \( R \) de \( X \times Y \). 
 Escreveremos \( x R y \) para indicar que \( ( x, y ) \in R \).
+Perceba que uma função \( f : X \to Y \) é uma relação de \( X \) em \( Y \) dada por \( ( x, y ) \in f \) se, e somente se, \( y = f(x) \).
+Quando \( R \subset X \times X \), diremos que \( R \) é uma relação em \( X \).
 
 Uma \emph{relação de ordem parcial} em \( X \) é uma relação que satisfaz, dados \( x, y, z \in X \):
 \begin{enumerate}[label=\roman*)]
     \item \( x R x \) (\emph{reflexividade});
     \item Se \( x R y \) e \( y R x \), então \( x = y \) (\emph{antisimetria});
-    \item Se \( x R y \) e \( y R z \), então \( x R z \) (\emph{transitividade});
+    \item Se \( x R y \) e \( y R z \), então \( x R z \) (\emph{transitividade}).
 \end{enumerate}
 O termo \emph{parcial} é utilizado para indicar que podem existir elementos de \( X \) não relacionados por essa ordem.
 Caso tenhamos \( x R y \) ou \( y R x \) para todos \( x, y \in X \), então \( R \) é dita uma relação de ordem \emph{total}.
@@ -35,6 +54,91 @@ Essa ordem não é total e o único elemento maximal de \( \mathcal{P} ( X ) \) 
     Todo conjunto parcialmente ordenado, tal que todos seus subconjuntos totalmente ordenados possuam cota superior, possui elemento maximal.
 \end{axiom}
 
-Agora provaremos um resultado que exemplifica como o Lema de Zorn geralmente é utilizado.
+Encerramos essa apresentação com um resultado que exemplifica como o Lema de Zorn geralmente é utilizado.
 
-%% pagina 69 pdf impa
+\begin{prop}
+    Todo espaço vetorial não trivial, ou seja, que possui elementos não nulos, possui uma base.
+\end{prop}
+\begin{proof}
+    Seja \( V \) o espaço vetorial em questão, e \( A \) a coleção de todos os subconjuntos linearmente independentes de \( V \).
+    Claramente essa coleção é parcialmente ordenada pela relação de inclusão.
+    Dada uma subcoleção \( B \subset A \) totalmente ordenada, considere o conjunto \[
+        C = \bigcup_{ \beta \in B } \beta
+    .\]
+    Afirmamos que \( C \in A \).
+    De fato, dado um conjunto finito \( \left\{ x_{ 1 }, \dots, x_{ n } \right\} \subset C \), sejam \( \beta_{ 1 }, \dots, \beta_{ n } \) os conjuntos de \( B \) tais que \( x_{ i } \in \beta_{ i } \) para todo \( i \leq n \).
+    Como \( B \) é totalmente ordenado, existe \( \beta_{ k } \) tal que \( \beta_{ i } \subset \beta_{ k } \) para todo \( i \leq n \).
+    Logo \( \left\{ x_{ i }, \dots, x_{ n } \right\} \subset  \beta_{ k } \) e, como \( \beta_{ k } \) é linearmente independente, também o são os \( x_{ i } \).
+    Dessa forma, \( C \) é um conjunto linearmente independente, pertencente a \( A \) e que claramente é uma cota superior de \( B \).
+
+    Portanto, aplicando o Lema de Zorn obtemos um elemento maximal \( \Lambda \) de \( A \).
+    Denotando por \( \lin \Lambda \) o conjunto formado pelas combinações lineares de elementos de \( \Lambda \), afirmamos que \( \lin \Lambda = A \).
+    Com efeito, supondo, por absurdo, que exista \( v \in V - \lin \Lambda \), temos que \( \Lambda \cup \left\{ v \right\} \) é linearmente independente, ou seja, pertence a \( A \) e contém \( \Lambda \), um contradição pois \( \Lambda \) é maximal.
+\end{proof}
+
+\subsection{Demonstração do Teorema de Hahn-Banach}
+
+Seja \( \left\{ g_{ \lambda } \right\}_{ \lambda \in L } \), para algum conjunto de índices \( L \), a coleção das extensões lineares de \( f \) em conjuntos \( M_{ \lambda } \) tais que \( M \subset  M_{ \lambda } \subset V \), que são dominadas por \( p \).
+Como \( f \in \left\{ g_{ \lambda } \right\}_{ \lambda \in L } \), essa coleção é não-vazia e, portanto, podemos ordená-la parcialmente utilizando a relação de inclusão (considerando que \( g_{ \lambda } \) é um subconjunto de \( M_{ \lambda } \times \R \)).
+Desejamos mostrar que existe um elemento maximal de \( \left\{ g_{ \lambda } \right\}_{ \lambda \in L } \).
+Dado \( L' \subset L \) tal que \( \left\{ g_{ \lambda } \right\}_{ \lambda \in L' } \) é uma subcoleção totalmente ordenada, definimos \( g \) como \[
+    g \define \bigcup_{ \lambda \in L' } g_{ \lambda }
+,\]
+ou seja, \( g \) é um funcional linear em \( \bigcup_{ \lambda \in L } M_{ \lambda } \) tal que \( g(v) = g_{ \lambda } (v) \), onde \( v \in M_{ \lambda } \).
+De fato \( g \) está bem definida, pois se \( v \in M_{ \lambda_{ 1 } } \cup M_{ \lambda_{ 2 } } \) com \( \lambda_{ 1 } \neq \lambda_{ 2 } \), ambos pertencentes a \( L' \), então podemos supor, sem perda de generalidade, que \( g_{ \lambda_{ 2 } } \subset g_{ \lambda_{ 1 } } \) e, assim, \( g_{ \lambda_{ 1 } } (v) = g_{ \lambda_{ 2 } }(v) \). 
+É fácil verificar que \( g \) estende \( f \) e é dominado por \( p \).
+Logo, \( g \) é uma cota superior de \( \left\{ g_{ \lambda } \right\}_{ \lambda \in L' } \) e, pelo Lema de Zorn, existe \( F \in \left\{ g_{ \lambda } \right\}_{ \lambda \in L } \), definido em \( W \subset  V \), maximal.
+
+Intuitivamente é claro que \( F \) deve estar definida em todo o espaço \( V \), de modo que é a extensão de Hahn-Banach de \( f \).
+Para demonstrar esse fato, suponha, por absurdo, que ele seja falso, ou seja, que exista \( \eta \in V - W \).
+Nossa estratégia será construir um uma extensão \( G \) de \( F \), dominada por \( p \), definida em \( U = \lin (W \cup \left\{ \eta \right\}) \), contradizendo a maximalidade de \( F \).
+
+Para definirmos \( G \), basta atribuirmos um valor para \( G(\eta) \).
+De fato, todo elemento de \( U \) é da forma \( w + h \eta \), onde \( w \in W \) e \( \alpha \in \R \).
+Logo, pondo \[
+    G(w + \alpha \eta) = F(w) + \alpha G(\eta)
+,\]
+claramente \( G \) é uma extensão de \( F \).
+O passo crucial é definir \( G(\eta) \) de forma que \( G \) seja dominada por \( p \).
+Para tanto, vamos nos atentar a algumas desigualdades.
+Dados \( w_{ 1 }, w_{ 2 } \in W \), vale \[
+    F(w_{ 1 }) + F(w_{ 2 }) =
+    F(w_{ 1 } + w_{ 2 }) \leq
+    p(w_{ 1 } + w_{ 2 }) \leq
+    p(w_{ 1 } - \eta) + p(\eta + w_{ 2 })
+.\]
+Equivalentemente: \[
+    F(w_{ 1 }) - p(w_{ 1 } - \eta) \leq p(\eta + w_{ 2 }) - F(w_{ 2 })
+.\]
+Ou seja, temos \[
+    \sup \left\{ F(w_{ 1 }) - p(w_{ 1 } - \eta) \tq w_{ 1 } \in W \right\} \leq
+    \inf \left\{ p(\eta + w_{ 2 }) - F(w_{ 2 }) \tq w_{ 2 } \in W \right\}
+.\]
+Defina, então, \( G(\eta) \) de modo que \[
+    \sup \left\{ F(w_{ 1 }) - p(w_{ 1 } - \eta) \tq w_{ 1 } \in W \right\} \leq
+    G(\eta) \leq
+    \inf \left\{ p(\eta + w_{ 2 }) - F(w_{ 2 }) \tq w_{ 2 } \in W \right\}
+.\]
+Dessa forma, dado \( w + \alpha \eta \in U \), se \( \alpha > 0 \) temos
+\begin{align*}
+    G(w + \alpha \eta) &=
+    F(w) + \alpha G(\eta) \\
+    &\leq F(w) + \alpha \left( 
+        p \left( \frac{ w }{ \alpha } + \eta \right) - F \left(  \frac{ w }{ \alpha }  \right)
+    \right) \\
+    &= F(w) + p(w + \alpha \eta) - F(w) \\
+    &= p(w + \alpha \eta)
+.\end{align*}
+Caso \( \alpha < 0 \):
+\begin{align*}
+    G(w + \alpha \eta) &=
+    F(w) + \alpha G(\eta) \\
+    &\leq F(w) + \alpha \left( 
+        F \left( \frac{ w }{ \abs{ \alpha } } \right) -
+        p \left( \frac{ w }{ \abs{ \alpha } } - \eta \right)
+    \right) \\
+    &= F(w) - F(w) - p(-w - \alpha \eta) \\
+    &= p(w + \alpha \eta)
+.\end{align*}
+Se \( \alpha = 0 \), \( G \) coincide com \( F \) e claramente é dominada por \( p \).
+Sendo assim, chegamos a uma contradição com a maximalidade de \( F \), o que conclui a prova.
