--- a/preamble.tex
+++ b/preamble.tex
@@ -28,3 +28,4 @@
 \DeclareMathOperator{\rref}{rref}
 \DeclareMathOperator{\vspan}{span}
 \DeclareMathOperator{\proj}{proj}
+\DeclareMathOperator{\lin}{Lin}
