--- a/espacos-metricos.tex
+++ b/espacos-metricos.tex
@@ -22,9 +22,9 @@ Pelo bem da completude do texto, primeiro introduziremos algumas noções relati
     Por vezes, onde não houver prejuízo ao entendimento do texto, utilizaremos apenas o nome do conjunto para nos referirmos ao espaço métrico por ele formado.
 
 \begin{defn}
-    Um suconjunto \( M \) de um espaço métrico \( (X, d) \) é dito \emph{limitado} se existe \( c \in \R \) tal que \( d(x, y) \leq c \) para todos \( x, y \in M \).
+    Um suconjunto \( M \) de um espaço métrico \( X \) é dito \emph{limitado} se existe \( c \in \R \) tal que \( d(x, y) \leq c \) para todos \( x, y \in M \).
     Nesse caso, o definimimos o \emph{diâmetro} de \( M \), denotado por \( \diam M \), como \( \sup \left\{ d(x, y) \tq x, y \in M \right\} \).
-    Se \( M \) é ilimitado, ou seja, dado \( c > 0 \) existem \( x, y \in M \) com \( d(x, y) > c \), dizemos que \( \diam M = \infty \).
+    Se \( M \) é ilimitado, ou seja, para todo \( c > 0 \) existem \( x, y \in M \) com \( d(x, y) > c \), dizemos que \( \diam M = \infty \).
 \end{defn}
 
 %% \begin{exmp}[A reta]
@@ -37,30 +37,30 @@ Pelo bem da completude do texto, primeiro introduziremos algumas noções relati
 %% \end{exmp}
 
 \begin{defn}
-    Dado um espaço métrico \( ( X, d ) \) e um ponto \( a \in X \), chamamos de \emph{bola aberta de raio r centrada em a}, e denotamos por \( B(a, r) \), o conjunto \[
-        \left\{ x \in X \tq d(x, a) < r \right\}
+    Dado um espaço métrico \( X \) e um ponto \( a \in X \), chamamos de \emph{bola aberta de raio r centrada em a} o conjunto \[
+        B(a, r) \defeq \left\{ x \in X \tq d(x, a) < r \right\}
     .\]
 \end{defn}
 
 \begin{defn}
-    Dado um espaço métrico \( ( X, d ) \) e um subconjunto \( Y \subset X \), chamamos de \emph{interior} de \( Y \), e denotamos por \( \intt Y \), o subconjunto de \( Y \) formado pelos elementos \( a \in Y \) tais que existe \( r > 0 \) satisfazendo \( B(a, r) \subset Y \).
+    Dado um espaço métrico \( X \) e um subconjunto \( Y \subset X \), chamamos de \emph{interior} de \( Y \), e denotamos por \( \intt Y \), o subconjunto de \( Y \) formado pelos elementos \( a \in Y \) tais que existe \( r > 0 \) satisfazendo \( B(a, r) \subset Y \).
 \end{defn}
 
 \begin{defn}
-    Um subconjunto \( A \) de um espaço métrico \( (X, d) \) é dito \emph{aberto} se \( A = \intt A \).
+    Um subconjunto \( A \) de um espaço métrico \( X \) é dito \emph{aberto} se \( A = \intt A \).
 \end{defn}
 
 \begin{defn}
-    Dado um subconjunto \( M \) de um espaço métrico \( (X, d) \), um ponto \( x \in X \) é dito \emph{aderente} a \( M \) se toda bola aberta centrada em \( x \) tiver interseção não-vazia com \( M \).
+    Dado um subconjunto \( M \) de um espaço métrico \( X \), um ponto \( x \in X \) é dito \emph{aderente} a \( M \) se toda bola aberta centrada em \( x \) tiver interseção não-vazia com \( M \).
     Chamamos de \emph{fecho} de \( M \), e denotamos por \( \overline{M} \), o conjunto dos pontos de aderência de \( M \).
 \end{defn}
 
 \begin{defn}
-    Um subconjunto \( F \) de um espaço métrico \( (X, d) \) é dito \emph{fechado} se \( F = \overline{F} \).
+    Um subconjunto \( F \) de um espaço métrico \( X \) é dito \emph{fechado} se \( F = \overline{F} \).
 \end{defn}
 
 \begin{defn}
-    Dada uma sequência \( (x_{ n })_{ n \in \N } \) de elementos do espaço métrico \( (X, d) \), ou seja, uma função \( f : \N \to X \), dizemos que \( (x_{ n }) \) \emph{converge} para \( L \in X \) se, dado \( \varepsilon > 0 \), existe \( n_{ 0 } \in \N \) tal que, para \( n \geq n_{ 0 } \), vale \( d(x_{ n }, L) < \varepsilon \).
+    Dada uma sequência \( (x_{ n })_{ n \in \N } \) de elementos do espaço métrico \( X \), dizemos que \( (x_{ n })_{ n \in \N } \) \emph{converge} para \( L \in X \) se, dado \( \varepsilon > 0 \), existe \( n_{ 0 } \in \N \) tal que, para \( n \geq n_{ 0 } \), vale \( d(x_{ n }, L) < \varepsilon \).
     Se para todo \( L \in X \) é falso que \( \lim x_{ n } = L \), dizemos que \( ( x_{ n } ) \) é \emph{divergente}.
 \end{defn}
 
@@ -70,12 +70,12 @@ Pelo bem da completude do texto, primeiro introduziremos algumas noções relati
 \end{defn}
 
 \begin{prop}
-    Toda sequência convergente \( (x_{ n })_{ n \in \N } \) no espaço métrico \( X \) é de Cauchy
+    Toda sequência convergente \( (x_{ n })_{ n \in \N } \) no espaço métrico \( X \) é de Cauchy.
 \end{prop}
 
 \begin{proof}
     Seja \( L = \lim x_{ n } \).
-    Dado \( \varepsilon > 0 \), tome \( n_{ 0 } \in \N \) de modo que, para \( n \geq n_{ 0 } \), valha \( d(n, L) < \varepsilon/2 \).
+    Dado \( \varepsilon > 0 \), tome \( n_{ 0 } \in \N \) de modo que, para \( n \geq n_{ 0 } \), valha \( d(x_{ n }, L) < \varepsilon/2 \).
     Então, se \( n, m \geq n_{ 0 } \) temos \[
         d(x_{ n }, x_{ m }) \leq d(x_{ n }, L) + d(x_{ m }, L) = \varepsilon/2 + \varepsilon/2 = \varepsilon
     .\qedhere\]
@@ -102,27 +102,27 @@ Pelo bem da completude do texto, primeiro introduziremos algumas noções relati
 
 
 \begin{defn}
-    Um espaço métrico \( ( X, d ) \) é dito \emph{completo} se toda sequência de Cauchy em \( X \) converge para um elemento de \( X \).
+    Um espaço métrico \( X \) é dito \emph{completo} se toda sequência de Cauchy em \( X \) converge para um elemento de \( X \).
 \end{defn}
 
 
 
 \begin{prop}
     \label{prop: fechados_encaixados}
-    Um espaço métrico \( ( X, d ) \) é completo se, e somente se, dada uma sequência decrescente \( F_{ 1 } \supset F_{ 2 } \supset \cdots \) de conjuntos não-vazios fechados em \( X \), tais que \( \lim \diam F_{ n } = 0 \), existe \( a \in X \) com \[
+    Um espaço métrico \( X \) é completo se, e somente se, dada uma sequência decrescente \( F_{ 1 } \supset F_{ 2 } \supset \cdots \) de conjuntos não-vazios fechados em \( X \), tais que \( \lim \diam F_{ n } = 0 \), existe \( a \in X \) com \[
         \left\{ a \right\} = \bigcap_{ n=1 }^{ \infty } F_{ i }
     .\]
 \end{prop}
 
 \begin{proof}
-    Suponha que \( X \) seja completo e considere \( ( F_{ n } )_{ n \in \N } \) como no enunciado do Teorema.
+    Suponha que \( X \) seja completo e considere \( ( F_{ n } )_{ n \in \N } \) como no enunciado do teorema.
     Para cada conjunto \( F_{ n } \), escolha \( x_{ n } \in F_{ n } \), formando uma sequência \( ( x_{ n } )_{ n \in \N } \) de Cauchy.
     De fato, como \( \lim \diam F_{ n } = 0 \), dado \( \varepsilon > 0 \) existe \( n_{ 0 } \in \N \) tal que para \( n \geq n_{ 0 } \), temos \( d(x, y) < \varepsilon \) para todos \( x, y \in F_{ n } \).
     De \( F_{ 1 } \supset F_{ 2 } \supset \cdots \) concluímos que \( n, m > n_{ 0 } \) implicam \( x_{ n }, x_{ m } \in F_{ n_{ 0 } } \) o que implica \( d(x_{ n }, x_{ m }) < \varepsilon \).
 
-    Da completude de \( X \) concluímos que existe \( x = \lim x_{ n } \).
-    Como todos \( F_{ n } \) são fechados e, para \( m \geq n \) temos \( x_{ m } \in F_{ n } \), conclui-se que \( x \in F_{ n } \) para todo \( n \in \N \), ou seja, \[
-        x \in \bigcap_{ n=1 }^{ \infty } F_{ n }
+    Da completude de \( X \) concluímos que existe \( a = \lim x_{ n } \).
+    Como todos \( F_{ n } \) são fechados e, para \( m \geq n \) temos \( x_{ m } \in F_{ n } \), conclui-se que \( a \in F_{ n } \) para todo \( n \in \N \), ou seja, \[
+        a \in \bigcap_{ n=1 }^{ \infty } F_{ n }
     .\]
     Suponha, agora, que \( X \) seja um espaço métrico no qual toda sequência de fechados como a do enunciado convirja.
     Seja \( ( x_{ n } )_{ n \in \N } \) uma sequência de Cauchy em \( X \).
@@ -134,7 +134,7 @@ Pelo bem da completude do texto, primeiro introduziremos algumas noções relati
 \end{proof}
 
 \begin{teo}[Teorema da Categoria de Baire]
-    Se \( ( X, d ) \) é um espaço métrico completo e \( A_{ 1 }, A_{ 2 }, \dots \) são abertos densos em \( X \), então \[
+    Se \( X \) é um espaço métrico completo e \( A_{ 1 }, A_{ 2 }, \dots \) são abertos densos em \( X \), então \[
         A = \bigcap_{ i=1 }^{ \infty } A_{ i }
     \]
     é denso em \( X \).
