--- a/hilbert.tex
+++ b/hilbert.tex
@@ -1,4 +1,4 @@
-% !TeX root = ./master.tex
+% !TeX root = ./main.tex
 \section{O Décimo Terceiro Problema de Hilbert}
 
 Diferentemente do Teorema da Aproximação de Weierstrass, o \( 13^{ \circ } \) problema de Hilbert não trata de aproximações, mas de representações exatas de funções.
