--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,15 @@
 
 \maketitle
 
-\input{weierstrass.tex}
-\input{espacos-metricos.tex}
-\input{hilbert.tex}
-\input{hahn-banach.tex}
+%% \input{weierstrass}
+%% \input{hilbert}
+%% \input{hahn-banach}
+\input{aplicacoes-hahn-banach}
+
+\newpage
+
+\appendix
+%% \input{espacos-metricos}
+%% \input{analise-funcional}
 
 \end{document}
