--- a/hahn-banach.tex
+++ b/hahn-banach.tex
@@ -1,4 +1,4 @@
-% !TeX root = ./master.tex
+% !TeX root = ./main.tex
 \section{O Teorema de Hahn-Banach}
 
 Dado um espaço vetorial \( V \) sobre um corpo \( \K \) , um \emph{funcional linear} em \( V \) é uma função linear \( f : V \to \K \).
