--- a/main.tex
+++ b/main.tex
@@ -13,15 +13,14 @@
 
 \maketitle
 
-%% \input{weierstrass}
-%% \input{hilbert}
-%% \input{hahn-banach}
-\input{aplicacoes-hahn-banach}
+\input{weierstrass}
+\input{hilbert}
+\input{hahn-banach}
 
 \newpage
 
 \appendix
-%% \input{espacos-metricos}
-%% \input{analise-funcional}
+\input{espacos-metricos}
+\input{analise-funcional}
 
 \end{document}
