--- a/hilbert.tex
+++ b/hilbert.tex
@@ -1,14 +1,14 @@
 % !TeX root = ./main.tex
 \section{O Décimo Terceiro Problema de Hilbert}
 
-Diferentemente do Teorema da Aproximação de Weierstrass, o \( 13^{ \circ } \) problema de Hilbert não trata de aproximações, mas de representações exatas de funções.
+Diferentemente do teorema da Aproximação de Weierstrass, o \( 13^{ \circ } \) problema de Hilbert não trata de aproximações, mas de representações exatas de funções.
 Mais especificamente, Hilbert postulou (utilizando a linguagem matemática de sua época) que existem funções contínuas de \( \I^{ 3 } \) em \( \R \), onde \( \I = [0, 1] \), que não podem ser expressas por meio da composição e adição de funções de \( \R^{ 2 } \) em \( \R \).
 
 Décadas após ser postulada, essa conjectura eventualmente foi demonstrada \emph{falsa}.
 A prova foi dada por Vladimir Igorevich Arnol'd, 14 anos após a morte de Hilbert.
 Ele e seu orientador de Doutorado, Andrej Nikolajewitsch Kolmogorov, provaram que, na verdade, toda função contínua \( f : \I^{ n } \to \R \) pode ser expressa como composições e adições de funções contínuas de \( \R \to \R \).
 Com o trabalho de outros matemáticos, esse resultado foi generalizado.
-Uma dessas generalizações é apresentada no Teorema a seguir.
+Uma dessas generalizações é apresentada no teorema a seguir.
 \begin{teo}[Kolmogorov, Arnol'd, Kahane, Lorentz e Sprecher]
     Para todo \( n \in \N \) com \( n \geq 2 \), existem números reais \( \lambda_{ 1 }, \lambda_{ 2 }, \dots, \lambda_{ n } \) e funções contínuas \( \varphi_{ k } : \I \to \R \), para \( k = 1, \dots, 2n + 1 \), com a propriedade de que para toda função contínua \( f : \I^{ n } \to \R \) existe uma função contínua \( g : \R \to \R \) tal que, para todo \( ( x_{ 1 }, \dots, x_{ n } ) \in \I^{ n } \),
     \begin{equation}
