--- a/analise-funcional.tex
+++ b/analise-funcional.tex
@@ -2,7 +2,7 @@
 
 \section{Elementos de Análise Funcional}
 
-Aqui apresentaremos noções elementares que mesclam conceitos de Análise e de Álgebra Linear, utilizadas nas aplicações do teorema de Hahn-Banach.
+Aqui apresentaremos noções elementares que mesclam conceitos de Análise e de Álgebra Linear.
 
 \begin{defn}
     Dado um espaço vetorial \( V \) sobre um corpo \( \K \), uma \emph{norma} em \( V \) é uma função \( \norm{ \cdot } : V \to [0, +\infty) \) tal que
