Changes section titles

--- a/hahn-banach.tex
+++ b/hahn-banach.tex
@@ -1,5 +1,5 @@
 % !TeX root = ./main.tex
-\section{O Teorema de Hahn-Banach}
+\section{Teorema de Hahn-Banach}
 
 Se \( V \) é um espaço vetorial real, um \emph{funcional sublinear} em \( V \) é uma função \( p : V \to \R \) tal que \[
     p ( x + y ) \leq p(x) + p(y) \text{ e } p(\lambda x) = \lambda p(x) \text{ para todos \( x, y \in V \) e \( \lambda \in \R_{ \geq 0 } \)}
@@ -20,7 +20,7 @@ Antes de apresentar a demonstração do teorema \ref{thm: hahn-banach}, vamos in
 
 %% Escrever sobre o teorema, dar uma intuição da importância dele
 
-\subsection{O lema de Zorn}
+\subsection{Lema de Zorn}
 
 Dados conjuntos \( X \) uma \emph{relação} de \( X \) em \( Y \) é um subconjunto \( R \) de \( X \times Y \). 
 Escreveremos \( x R y \) para indicar que \( ( x, y ) \in R \).
