--- a/hilbert.tex
+++ b/hilbert.tex
@@ -1,5 +1,5 @@
 % !TeX root = ./main.tex
-\section{O Décimo Terceiro Problema de Hilbert}
+\section{Décimo Terceiro Problema de Hilbert}
 
 Diferentemente do teorema da Aproximação de Weierstrass, o \( 13^{ \circ } \) problema de Hilbert não trata de aproximações, mas de representações exatas de funções.
 Mais especificamente, Hilbert postulou (utilizando a linguagem matemática de sua época) que existem funções contínuas de \( \I^{ 3 } \) em \( \R \), onde \( \I = [0, 1] \), que não podem ser expressas por meio da composição e adição de funções de \( \R^{ 2 } \) em \( \R \).
